fixed contact form overlapping with footer

--- a/src/styles/contact-page.css
+++ b/src/styles/contact-page.css
@@ -1,10 +1,9 @@
 .contact {
-  height: 70vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 5%;
-  gap: 5%;
+  line-height: 2;
 }
 
 .form-wrapper {
